// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query gql matches the expectation when specifying a filter param 1`] = `
"query query0 {
 users: users(where: {and: [{firstName: {eq: \\"John\\"}}]}) {
   nodes {
     id
     version
     lastUpdatedBy
     type
     firstName
   }
   pageInfo {
     endCursor
     startCursor
     hasNextPage
     hasPreviousPage
   }
 }
}"
`;

exports[`query gql matches the expectation when specifying a filter param for a relational property 1`] = `
"query query0 {
 users: users(where: {and: [{todos: {and: [{task: {eq: \\"get it done\\"}}]}}]}) {
   nodes {
     id
     version
     lastUpdatedBy
     type
     firstName
     todos: todos {
       nodes {
         id
         version
         lastUpdatedBy
         type
         task
       }
       pageInfo {
         endCursor
         startCursor
         hasNextPage
         hasPreviousPage
       }
     }
   }
   pageInfo {
     endCursor
     startCursor
     hasNextPage
     hasPreviousPage
   }
 }
}"
`;
